<resources>
    <string name="app_name">NFT Creation</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="send_nft">Send NFT</string>
    <string name="gift_nft">Gift NFT</string>
    <string name="create_nft_title">Create NFT</string>
    <string name="share_app">Shared app</string>
    <string name="next">Next</string>
    <string name="upload_files">Upload Files</string>
    <string name="choose_file">Choose File</string>
    <string name="title">TITLE</string>
    <string name="description">DESCRIPTION</string>
    <string name="properties">PROPERTIES</string>
    <string name="add_more">Add More</string>
    <string name="mint_nft">Mint NFT</string>
    <string name="preview">Preview</string>


    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="phone_example">Ex. (373) 378 8383</string>
    <string name="email_example">Ex. abc@yourmail.org</string>
    <string name="get_started">Get Started</string>
    <string name="already_have_account">Already have a near account?</string>
    <string name="email_error">Please Enter a Valid Email Address</string>
    <string name="phone_error">Please Enter a Valid Phone Number</string>
    <string name="email_error_same">Please Enter a Different Email Address Than Your Current Email</string>
    <string name="phone_error_same">Please Enter a Different Phone Number Than Your Current Phone Number</string>
    <string name="name_error_same">Please Enter a Different Name Than Your Current Name</string>
    <string name="login_text_error">Please Enter Valid Login Credentials</string>
    <string name="by_clicking_login">by clicking continue you must agree to near labs\n Terms &amp; Conditions and Privacy Policy</string>

    <string name="create_account">Create NEAR Account</string>
    <string name="create_account_text">Enter an Account ID to use with your NEAR account. Your Account ID will be used for all NEAR operations, including sending and receiving assets.\n</string>
    <string name="full_name">FULL NAME</string>
    <string name="suggestion_full_name">Ex John Doe</string>
    <string name="suggestion_wallet_name">yourname.near</string>
    <string name="create_an_account">Create an account</string>
    <string name="by_creating_account">By creating a NEAR account, you agree to the NEAR Wallet\n Terms of Service and Privacy Policy.\n</string>
    <string name="login_with_NEAR">Login with NEAR</string>
    <string name="wallet_id"> ACCOUNT ID</string>
    <string name="full_name_error">Please enter your full name</string>
    <string name="wallet_name_error">Account id should only contain : lowercase alphanumeric characters with only dash or underscore special characters and no spaces</string>

    <string name="authentication">Authentication</string>
    <string name="enter_authentication_code">Enter authentication code</string>
    <string name="didnt_receive_code">Didn\'t receive your code?</string>
    <string name="resend_code">Resend your code</string>
    <string name="continueBtn">Continue</string>
    <string name="sent_code_email">We have sent a 6-digit authentication code to your email address</string>
    <string name="sent_code_email_current">We have sent a 6-digit authentication code to your current email address</string>
    <string name="sent_code_email_new">We have sent a 6-digit authentication code to your new email address</string>
    <string name="sent_code_phone">We have sent a 6-digit authentication code to your phone</string>
    <string name="sent_code_phone_current">We have sent a 6-digit authentication code to your current email address</string>
    <string name="sent_code_phone_new">We have sent a 6-digit authentication code to your new email address</string>
    <string name="send_different_email">Send to a different email address</string>
    <string name="send_different_phone">Send to a different phone number</string>
    <string name="resend_code_confirmation">Authentication Code Resent</string>


    <string name="send">Send</string>
    <string name="descriptions">Description</string>
    <string name="nft_info">NFT Info</string>
    <string name="token_id">Token ID</string>
    <string name="contact_address">Contact Address</string>
    <string name="claim">Claim</string>
    <string name="digital_art">Digital Art</string>
    <string name="creator">Creator</string>

    <string name="open">open</string>

    <string name="consent">Consent</string>
    <string name="request_access">NEAR Labs is requesting to access your account.</string>
    <string name="does_not_allow_app">This does not allow the app to transfer any tokens.</string>
    <string name="more_info">More Info</string>
    <string name="deny">Deny</string>
    <string name="allow">Allow</string>
    <string name="ntf_sent_success">NFT sent successfully to</string>
    <string name="nft_mint_success">%s successfully minted</string>


    <string name="setting_title">Settings</string>
    <string name="setting_connected_wallet">Connected Wallet</string>
    <string name="setting_profile">Profile Settings</string>
    <string name="setting_security">Security</string>
    <string name="setting_add_2fa_auth">Add 2FA authentication</string>
    <string name="setting_select_wallet">Select connected wallet</string>
    <string name="setting_add_new_wallet">Add new wallet</string>
    <string name="setting_change_name_wallet">Change name</string>
    <string name="setting_change_name_submit">Submit</string>
    <string name="setting_change_email">Change email</string>
    <string name="setting_change_phone">Change phone number</string>
    <string name="setting_hint_name">Name</string>
    <string name="create_nft_today">Start Creating your <b>NFTs</b> Today</string>
    <string name="create_nft">Create NFT</string>
    <string name="send_nft_desc">Select NFT you want to send</string>
    <string name="recent_transactions">Recent Transactions</string>
    <string name="see_all">See All</string>
    <string name="my_nft">My NFT</string>
    <string name="create_an_nft">Create an NFT</string>

    <string name="transaction_all">All</string>
    <string name="transaction_sent">Sent</string>
    <string name="transaction_recv">Recv</string>
    <string name="open_history">Open History</string>
    <string name="send_nft_back">Back</string>
    <string name="claim_nft">Claim NFT</string>
    <string name="create_new_wallet">Creat new Wallet</string>
    <string name="login_with_near_wallet">Login with NEAR wallet</string>
    <string name="nft_upload_files">Upload Files <font fgcolor='#FF0000'>*</font></string>
    <string name="nft_title">Title <font fgcolor='#FF0000'>*</font></string>
    <string name="nft_description">Description <font fgcolor='#FF0000'>*</font></string>
</resources>