<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/rootView"
    android:fitsSystemWindows="true"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:background="@drawable/bg_bottom_dialog_round"
        android:padding="8dp">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textTitle"
            style="@style/Setting.Title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/setting_change_name_wallet"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/btnClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_close"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edit_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:background="@drawable/bg_edittext_fill_selected"
            android:hint="@string/setting_hint_name"
            android:padding="12dp"
            android:singleLine="true"
            android:imeOptions="actionDone"
            android:textColor="@color/black"
            android:textCursorDrawable="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textTitle" />

        <requestFocus />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnAddNewWallet"
            style="@style/Button.Dialog"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:text="@string/setting_change_name_submit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_name" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</RelativeLayout>