<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="12dp"
        android:background="@drawable/bg_bottom_dialog_round"
        android:padding="8dp">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textTitle"
            style="@style/Setting.Title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/claim_nft"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/btnClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_close"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCreateNewWallet"
            style="@style/ButtonBlack.Dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/create_new_wallet"
            app:icon="@drawable/ic_arrow_forward"
            app:iconGravity="textEnd"
            app:iconSize="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textTitle" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLogin"
            style="@style/Button.Dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="6dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/login_with_near_wallet"
            app:icon="@drawable/ic_arrow_forward"
            app:iconGravity="textEnd"
            app:iconSize="12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnCreateNewWallet" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>